Enable HOLD capability for IMS-based CDMA connections.
+ Refactored method for checking whether a call is based on an IMS
connection into the parent TelephonyConnection class.
+ Changed CdmaConnection/GsmConnection to obtain a populated
call capabilities from their TelephonyConnection super class when
building call capabilities.
+ Add IMS-scenario handling for HOLD when building call capabilities.

Bug: 17913504
Change-Id: I03316a0bea509395fe9a0f0688047f96c72db87e

Disable disconnect/separate for connections which were ever IMS.

When a conference call hands over from an IMS call to a circuit
switch call, we aren't guaranteed to support a call list and be
able to actions like disconnect/separate which you might if you
started the conference in GSM.

For now, disable DISCONNECT/SEPARATE if the connection is was
ever an IMS connection. We can adjust casing depending on
the individual carrier IMS implementations later on.

Also, if a conference is handed over from IMS to CS, disable
conference management because we don't know if we'll be able to
regenerate the call list.

If we need to track more initial states in the future, we should
use an enum or set of integer states instead of a boolean to track.

Bug: 17429707
Change-Id: Ib23977c8f731395bb70628a2a7af5b4052808d49

Convert GsmConference into more generic TelephonyConference.

+ Retype Conference and Controller to handle TelephonyConnections
rather than GsmConferences.
+ Rename classes.
+ Add connections to TelephonyConference if IMS is supported, and
the original connections are IMS connections (even if the
TelephonyConnections are CdmaConnections).
+ I haven't been able to test these VOLTE changes on CDMA because
of network instability. For existing GSM calls, TelephonyConference,
and TelephonyConferenceController should not cause any changes. We
need to verify that these work properly with IMS on CDMA phones.

Bug: 18062269
Change-Id: I2d7f717b2560b69c6579072dcdd5bec583062b38

Remove manage conference option for

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1274,7 +1274,9 @@
     </string-array>
 
     <!-- Title for the dialog used to display CDMA DisplayInfo -->
-    <string name="network_message">Network message</string>
+    <string name="network_info_message">Network message</string>
+    <!-- Title for the dialog used to display a network error message to the user -->
+    <string name="network_error_message">Error message</string>
 
     <!-- Shown in "Managed Roaming" dialog when registration is denied with rejCode 10. -->
     <string name="managed_roaming_title">Managed Roaming</string>
