IMS-VT: Do not allow changing the TTY mode during a Video call
When the device is already in a video call, the user SHOULD NOT
be allowed to change the TTY mode. If the user tries to change,
then an UI alert message will be displayed explaining it cannot
be changed during video calls.

Change-Id: Ibb089c125d509ae8d2ebd3d351850dc20ec1b074
CRs-Fixed: 734258

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -892,7 +892,8 @@
     <string name="tty_mode_option_summary">Set TTY mode</string>
     <string name="auto_retry_mode_title">Auto-retry</string>
     <string name="auto_retry_mode_summary">Enable Auto-retry mode</string>
-
+    <!-- TTY Mode change is NOT allowed during a VT call -->
+    <string name="tty_mode_not_allowed_vt_call">TTY Mode change is not allowed during a VT call</string>
     <!-- FDN list screen: menu item label -->
     <string name="menu_add">Add contact</string>
     <!-- FDN list screen: menu item label -->
